# SSPARQ

./: .gitignore  LICENSE.txt  README.md  SSPARQ_earthquake_plot.ipynb  SSPARQ_estimative.ipynb  SSPARQ_results_plot.ipynb  config_file (copy).cnf  config_file.cnf  environment.yml
.ipynb_checkpoints/: SSPARQ_earthquake_plot-checkpoint.ipynb  SSPARQ_estimative-checkpoint.ipynb  SSPARQ_results_plot-checkpoint.ipynb
.virtual_documents/: SSPARQ_earthquake_plot.ipynb  SSPARQ_estimative.ipynb  SSPARQ_results_plot.ipynb
.virtual_documents/Extra/Paper_figures/: Results_compilation.ipynb
Extra/Download_Catalog/: pyGCMT-RSBR_15_years.ipynb
Extra/Download_Catalog/.ipynb_checkpoints/: pyGCMT-G_15_years-checkpoint.ipynb
Extra/Download_Catalog/.virtual_documents/: pyGCMT-G_15_years.ipynb
Extra/Paper_figures/: Results_compilation.ipynb
Sample/MSEED/2010/139/2010.139.04.15.45/: US.MVCO..BHE.2010.139.04.15.45  US.MVCO..BHN.2010.139.04.15.45  US.MVCO..BHZ.2010.139.04.15.45
Sample/OUTPUT/FEATHER_FILES/METRICS/US.MVCO/: US.MVCO.2010.139.04.15.45.metrics.feather
Sample/XML/: US.MVCO.xml
docs/: pyproject.toml  requirements.in  requirements.txt
docs/source/: api.md  conf.py  fetching.md  references.md  todolist.md  usefulfunction.md  whatis.md
parameters_py/: config.py
src/: analysis.py  plot.py  utils.py
src/.ipynb_checkpoints/: analysis-checkpoint.py  plot-checkpoint.py  utils-checkpoint.py
